--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="https://www.marvel.com/" target="_blank"><img class="w-16 relative z-10 mr-15 lg:w-25 " src="../img/logo-marvel.png"
                 alt="Logo Marvel"></a>
         <ul class="flex gap-8 font-[Marvel]">
-            <a href="../Html/index.html">
+            <a href="../index.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer  hover:transi">Home
                 </li>
             </a>
