--- a/Html/colecao.html
+++ b/Html/colecao.html
@@ -13,7 +13,7 @@
     <title>Homem de Ferro</title>
 </head>
 
-<body class="bg-[url(/img/homem-de-ferro-3.jpg)] m-0 p-0 bg-cover bg-center bg-no-repeat h-screen overflow-x-hidden ">
+<body class="bg-[url(/img/homem-de-ferro-3.jpg)] m-0 p-0 bg-cover bg-center bg-no-repeat h-screen overflow-x-hidden overflow-y-hidden ">
 
     <div class="absolute inset-0">
         <img src="/img/smoke.png" class="w-full h-full xl:h-175 object-cover opacity-40" alt="Fumaça">
