--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Homem de Ferro</title>
 </head>
 
-<body class="bg-[url(/img/homem-de-ferro.jpeg)]  m-0 p-0 bg-cover bg-center bg-no-repeat min-h-screen overflow-x-hidden">
+<body class="bg-[url(/img/homem-de-ferro.jpeg)]  m-0 p-0 bg-cover bg-center bg-no-repeat min-h-screen overflow-x-hidden overflow-y-hidden  h-screen">
 
     <div class="absolute inset-0">
     <img src="/img/smoke.png" class="w-full h-full object-cover opacity-40" alt="Fumaça">
@@ -24,14 +24,14 @@
         <a href="https://www.marvel.com/" target="_blank"><img class="w-16 relative z-10 mr-15 lg:w-25 " src="../img/logo-marvel.png"
                 alt="Logo Marvel"></a>
         <ul class="flex gap-8 font-[Marvel]">
-            <a href="../index.html">
+            <a href="/index.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer  hover:transi">Home
                 </li>
             </a>
-            <a href="../Html/historia.html">
+            <a href="/Html/historia.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer">História</li>
             </a>
-            <a href="./colecao.html">
+            <a href="/Html/colecao.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer">Coleção</li>
             </a>
         </ul>
