--- a/Html/colecao.html
+++ b/Html/colecao.html
@@ -23,14 +23,14 @@
         <a href="https://www.marvel.com/" target="_blank"><img class="w-16 relative z-10 mr-15 lg:w-25 md:mr-50 " src="../img/logo-marvel.png"
                 alt="Logo Marvel"></a>
         <ul class="flex gap-8 font-[Marvel]">
-            <a href="../index.html">
+            <a href="/index.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer  hover:transi">Home
                 </li>
             </a>
-            <a href="../Html/historia.html">
+            <a href="/Html/historia.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer">História</li>
             </a>
-            <a href="./colecao.html">
+            <a href="/Html/colecao.html">
                 <li class="hover:scale-110 transition duration-300 hover:text-red-600 cursor-pointer">Coleção</li>
             </a>
         </ul>
